# hermes-agent-faceplate

./: Makefile  QUICKSTART.md  SETUP.md  THIRD_PARTY_NOTICES.md
.claude/: settings.local.json
app/: README.md  bunny.code.html  package.json  pnpm-lock.yaml  quasar.config.ts  robo.example.html
app/scripts/: generate-notices.mjs
app/src-electron/: agent-push-bridge.ts  agent-push-installer.ts  artifact-fix-bridge.ts  artifact-store.ts  canvas-skill-installer.ts  conversation-store.ts  electron-main.ts  electron-preload.ts  event-bridge.ts  hermes-discovery.ts  hermes-tester.ts  hook-installer.ts  hook-listener.ts  kokoro-lifecycle.ts  notifications-bridge.ts  paraphrase-bridge.ts  platform-bridge.ts  preload-api.ts  settings-store.ts  shortcuts.ts  sidecar.ts  themes-store.ts  tray.ts  window.ts
app/src/agent-push/: agent-push-handler.ts
app/src/audio/: asr-client.ts  audio-context.ts  ptt-controller.ts  tts-client.ts  viseme-driver.ts  wake-client.ts
app/src/boot/: audio.ts  event-bus.ts  faceplate-api.ts
app/src/components/: AgentActivity.vue  ArtifactGallery.vue  ArtifactThumbnail.vue  Avatar.vue  AvatarHud.vue  BunnyFx.vue  Captions.vue  ConversationList.vue  ConversationListItem.vue  ConversationTranscript.vue  RoboFx.vue  StateRing.vue  TestMode.vue  ToolBadge.vue  ToolCallCard.vue  TurnBubble.vue  TypingBar.vue  VisemeMouth.vue
app/src/composables/: use-setting.ts
app/src/conversations/: conversation-syncer.ts
app/src/css/: app.scss
app/src/hermes/: canvas-instructions.ts  chat-client.ts  event-schema.ts  (+7 more)
docs/: DESIGN-ADDENDUM-01.md  DESIGN-CORE.md
docs/canvas/: CANVAS-REQUIREMENTS.MD
docs/v1/: settings-only-setup.md  v1.todo.md
hermes-plugin/: README.md
hermes-plugin/faceplate/: adapter.py  plugin.yaml
installer/: README.md  install.ps1  install.sh
scripts/: configure-hermes-tools.py  dump-last-run.py  start-hermes.sh  start-litert.sh  start-llm-tunnel.sh  start-searxng.sh
scripts/hermes/: Dockerfile
searxng/: docker-compose.yml  settings.yml
sidecar/: .dockerignore  .faceplate-api-key  Dockerfile.cpu  Dockerfile.cpu-slim  Dockerfile.cuda  README.md  compose.cpu-slim.yml  compose.cpu.yml  compose.cuda.yml  config.example.yaml  config.yaml  entrypoint.sh  pyproject.toml
sidecar/faceplate_sidecar/: __init__.py  auth.py  config.py  health.py  main.py
sidecar/faceplate_sidecar/backends/: __init__.py  litert_lm.py  openwakeword_be.py  piper_tts.py  whisper_asr.py
sidecar/faceplate_sidecar/routes/: __init__.py  asr.py  chat.py  tts.py  voices.py  wake.py
sidecar/wakewords/: README.md
(+56 files in other folders)
