[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceplate-sidecar"
version = "0.1.0"
description = "HermesAgent Faceplate speech sidecar (TTS / ASR / wake-word / paraphrase)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HermesAgent Faceplate" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "numpy>=1.26",
  "faster-whisper>=1.1",
  "piper-tts>=1.2; platform_machine != 'arm64' or sys_platform != 'darwin'",
  "openwakeword>=0.6",
]

[project.optional-dependencies]
cpu-slim = []  # marker only — no extra deps
cuda = [
  # GPU paths layer in extra wheels at image build time (see Dockerfile.cuda).
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
faceplate-sidecar = "faceplate_sidecar.main:app"

[tool.setuptools.packages.find]
include = ["faceplate_sidecar*"]
