[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faceplate-sidecar"
version = "0.1.0"
description = "HermesAgent Faceplate speech sidecar (TTS / ASR / wake-word / paraphrase)."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HermesAgent Faceplate" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "numpy>=1.26",
  "faster-whisper>=1.1",
  "piper-tts>=1.2; platform_machine != 'arm64' or sys_platform != 'darwin'",
  # openwakeword's runtime deps. We install openwakeword itself with
  # --no-deps in the Dockerfile to skip its bogus tflite-runtime hard dep
  # (no Python ≥3.11 / no arm64-Linux wheels). At runtime openwakeword
  # 0.6+ defers the import to the Model constructor, picking ONNX or
  # ai-edge-litert based on inference_framework — never plain tflite.
  "scipy>=1.3,<2",
  "scikit-learn>=1,<2",
  "requests>=2.0,<3",
  "mutagen>=1.46,<2",
]

[project.optional-dependencies]
cpu-slim = []  # marker only — no extra deps
cuda = [
  # GPU paths layer in extra wheels at image build time (see Dockerfile.cuda).
]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[project.scripts]
faceplate-sidecar = "faceplate_sidecar.main:app"

[tool.setuptools.packages.find]
include = ["faceplate_sidecar*"]
